--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -7,6 +7,8 @@ body {
   flex-direction: column;
   min-height: 100%;
   font-family: 'Roboto';
+  background-color: #222;
+  color: #fff;
 }
 
 * {
@@ -40,4 +42,9 @@ a {
 
 #navigation::-webkit-scrollbar {
   width: 0px;
+}
+
+/* Player styles */
+.rhap_time {
+  color: #fff !important;
 }
