--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -6,7 +6,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  font-family: 'Roboto';
+  /*   font-family: 'Roboto';*/
   background-color: #222;
   color: #fff;
 }
